[gd_scene load_steps=2 format=3 uid="uid://04ffon3dmj1a"]

[ext_resource type="Script" uid="uid://or50gmr3v3km" path="res://dawgshi/prototypin/UIs/test_input.gd" id="1_ycxae"]

[node name="TestInput" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ycxae")

[node name="Form" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
rotation = -0.00116358

[node name="Textedit" type="VBoxContainer" parent="Form"]
layout_mode = 2
size_flags_vertical = 3

[node name="nama" type="TextEdit" parent="Form/Textedit"]
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "NAMA"

[node name="kelas" type="TextEdit" parent="Form/Textedit"]
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "KELAS"

[node name="npm" type="TextEdit" parent="Form/Textedit"]
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "NPM"

[node name="desc" type="TextEdit" parent="Form/Textedit"]
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "DESC"

[node name="Buttons" type="HBoxContainer" parent="Form"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3

[node name="INPUT" type="Button" parent="Form/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "INPUT"

[node name="FETCH" type="Button" parent="Form/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "FETCH"

[node name="UPDATE" type="Button" parent="Form/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "UPDATE"

[node name="DELETE" type="Button" parent="Form/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "DELETE"

[connection signal="pressed" from="Form/Buttons/INPUT" to="." method="_on_input_pressed"]
[connection signal="pressed" from="Form/Buttons/FETCH" to="." method="_on_fetch_pressed"]
[connection signal="pressed" from="Form/Buttons/UPDATE" to="." method="_on_update_pressed"]
[connection signal="pressed" from="Form/Buttons/DELETE" to="." method="_on_delete_pressed"]
